test/deca/syntax/invalid/ifthenelse_else_no_if.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 8 : Erreur (on ne peut pas utiliser un else tout seul)

{
    else {
    
    }
}